fix background image not showing

--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ a:hover:not(#signupAnchor){
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    background: url('/assets/asset.jpg');
+    background-image: url('https://atomty1.github.io/goTaxi/assets/asset.jpg');
     /* background-image: url('/assets/asset.jpg'); */
     height: 100vh;
     background-position: center;
@@ -58,10 +58,10 @@ a:hover:not(#signupAnchor){
     animation: phoneImgBackground 10s cubic-bezier(0, 1, 0, 1) infinite;
 }
 @keyframes phoneImgBackground {
-    0%{background: url('/assets/asset.jpg');}
-    10%{background: url('/assets/asset.jpg');}
-    33%{background: url('/assets/asset1.jpg');}
-    66%{background: url('/assets/asset2.jpg');}
+    0%{background-image: url('https://atomty1.github.io/goTaxi/assets/asset.jpg');}
+    10%{background-image: url('https://atomty1.github.io/goTaxi/assets/asset.jpg');}
+    33%{background-image: url('https://atomty1.github.io/goTaxi/assets/asset1.jpg');}
+    66%{background-image: url('https://atomty1.github.io/goTaxi/assets/asset2.jpg');}
 }
 .phoneCircle{
     width: 15px;
